# L_Rack

./: .gitignore  CMakeLists.txt  installer.nsi
Libs/libcurl/: libcurl.lib
Libs/libspeexdsp/: libspeexdsp.lib
Libs/libzip/include/: config.h
Libs/libzip/lib/: zip.lib
Libs/nanovg/: nanovg.lib
Libs/openssl/: ssleay32.lib
Libs/openssl/inc32/openssl/: opensslconf.h
Libs/zlib/: zlib.lib
dep/: CMakeLists.txt
dep/glew/: CmakeLists.txt
dep/jansson/: CMakeLists_my.txt
dep/libzip/: CMakeLists.txt
dep/libzip/examples/: in-memory.c
dep/libzip/lib/: CMakeLists.txt
dep/libzip/regress/: add_from_filep.c  fopen_unchanged.c  fread.c  fseek.c  tryopen.c
dep/libzip/src/: CMakeLists.txt  hole.c  source_hole.c  zipcmp.c  zipmerge.c  ziptool.c
dep/nanovg/: CmakeLists.txt
dep/nanovg/example/: demo.c  example_fbo.c  example_gl3.c
dep/osdialog/: CmakeLists.txt  osdialog_win.c
dep/oui-blendish/: CmakeLists.txt  example.cpp  main.cpp
dep/pffft/: CmakeLists.txt  fftpack.c  pffft.c
dep/pffft/pffft_test/: test_pffft.c
dep/speexdsp/include/speex/: speex_resampler.h
include/: componentlibrary.hpp  config.hpp  libgen.h  plugin.hpp  rtmidi.hpp  ui.hpp
include/dsp/: fir.hpp  functions.hpp  resampler.hpp
include/util/: common.hpp  math.hpp
plugins/: CMakeLists.txt
plugins/src/: BlankPanel.cpp  BouncyBalls.cpp  Cat.cpp  FullScope.cpp  GridSeq.cpp  JWModules.cpp  JWModules.hpp  MinMax.cpp  NoteSeq.cpp  QuantizeUtils.cpp  Quantizer.cpp  SimpleClock.cpp  ThingThing.cpp  WavHead.cpp  XYPad.cpp
src/: asset.cpp  audio.cpp  bridge.cpp  config.cpp  main.cpp  plugin.cpp  window.cpp
src/Core/: Core.cpp
src/app/: AudioWidget.cpp  LedDisplay.cpp  ModuleBrowser.cpp  PluginManagerWidget.cpp  RackScene.cpp  RackWidget.cpp  SVGKnob.cpp  Toolbar.cpp
src/main/: main.cpp
src/ui/: TextField.cpp
src/util/: random.cpp  system.cpp
src/widgets/: Widget.cpp
test/: CMakeLists.txt  main.cpp
